feat: buildRest
