# modules/ltw-content-rest/ltw-content-rest-impl/rest-openapi.yaml
@@ -109,3 +109,61 @@ paths:
                             schema:
                                 $ref: "#/components/schemas/LTW_content"
             tags: [ "LTW_content" ]
+
+        put:
+            operationId: putLTW_Content
+            parameters:
+                - in: path
+                  name: ltwContentId
+                  required: true
+                  schema:
+                      format: int64
+                      type: integer
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            type: object
+                            properties:
+                                motorcycleName:
+                                    type: string
+                                    description: "Name of the motorcycle"
+                                motorcycleManufacturing:
+                                    type: string
+                                    description: "Manufacturing details of the motorcycle"
+                                motorcycleYear:
+                                    type: integer
+                                    description: "Year of the motorcycle"
+                    application/xml:
+                        schema:
+                            type: object
+                            properties:
+                                motorcycleName:
+                                    type: string
+                                    description: "Name of the motorcycle"
+                                motorcycleManufacturing:
+                                    type: string
+                                    description: "Manufacturing details of the motorcycle"
+                                motorcycleYear:
+                                    type: integer
+                                    description: "Year of the motorcycle"
+            responses:
+                '200':
+                    description: "LTW content successfully updated"
+                    content:
+                        application/json:
+                            schema:
+                                $ref: "#/components/schemas/LTW_content"
+                        application/xml:
+                            schema:
+                                $ref: "#/components/schemas/LTW_content"
+                '400':
+                    description: "Invalid input"
+                '401':
+                    description: "Unauthorized"
+                '403':
+                    description: "Forbidden"
+                '500':
+                    description: "Internal server error"
+            tags: [ "LTW_content" ]
+
